more adjustment